--- a/src/style.css
+++ b/src/style.css
@@ -449,7 +449,7 @@ body{
     grid-column: 2;
     grid-row: 1;
     height: 100%;
-    padding: 0.1rem 0;
+    padding: 0.1rem 0 0 0.1rem;
     gap: 0px 0px;
     line-height: 1em;
     white-space: pre;
@@ -457,21 +457,44 @@ body{
     font-size: 1em;
     font-weight: bold;
     letter-spacing: 0.5em;
+    overflow: clip;
 }
 
 .cellHighlight{
     position: absolute;
-    white-space: normal;
-    width: 1em;
-    height: 1em;
     background-color: var(--color-light-secondary);
     color: var(--color-light-primary);
+    outline: 3px solid var(--color-light-secondary);
+    outline-offset: -1px;
+    width: 1em;
+    height: 1em;
     opacity: 0%;
-    text-align: center;
-    outline: 2px solid var(--color-light-secondary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1em;
+    letter-spacing: normal;
+    pointer-events: none;
+    z-index: 1;
 }
 
 .staveGrid:hover div.cellHighlight{
+    opacity: 100%;
+}
+
+.cellDirection{
+    position: absolute;
+    background-color: var(--color-light-secondary);
+    color: var(--color-dark-primary);
+    opacity: 100%;
+    pointer-events: none;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    letter-spacing: normal;
+}
+
+.staveGrid:focus-within div.cellDirection{
     opacity: 100%;
 }
 
