--- a/src/style.css
+++ b/src/style.css
@@ -445,7 +445,7 @@ body{
 }
 
 .staveGrid{
-    display: grid;
+    position: relative;
     grid-column: 2;
     grid-row: 1;
     height: 100%;
@@ -475,7 +475,9 @@ body{
     line-height: 1em;
     letter-spacing: normal;
     pointer-events: none;
-    z-index: 1;
+    z-index: 5;
+    top: 0;
+    left: 0;
 }
 
 .staveGrid:hover div.cellHighlight{
@@ -491,10 +493,38 @@ body{
     text-align: center;
     display: flex;
     align-items: center;
+    justify-content: center;
     letter-spacing: normal;
+    z-index: 2;
+    top: 0;
+    left: 0;
 }
 
 .staveGrid:focus-within div.cellDirection{
+    opacity: 100%;
+}
+
+.cellActive{
+    position: absolute;
+    background-color: var(--color-blue);
+    color: var(--color-light-primary);
+    outline: 3px solid var(--color-blue);
+    outline-offset: -1px;
+    width: 1em;
+    height: 1em;
+    opacity: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1em;
+    letter-spacing: normal;
+    pointer-events: none;
+    z-index: 3;
+    top: 0;
+    left: 0;
+}
+
+.staveGrid:focus-within div.cellActive{
     opacity: 100%;
 }
 
