--- a/src/style.css
+++ b/src/style.css
@@ -347,6 +347,10 @@ body{
     opacity: 100%;
 }
 
+.prototypeContainer:has(div:is(.focus)) .contextMenu{
+    opacity: 100%;
+}
+
 .contextMenu{
     min-height: 1em;
     height: 100%;
@@ -358,6 +362,8 @@ body{
     justify-content: space-between;
     flex-direction: column;
     clip-path: fill-box;
+    grid-row: 1;
+    grid-column: 1;
 }
 
 .dragHandle{
@@ -370,7 +376,7 @@ body{
     align-content: center;
     background-color: transparent;
     user-select: none;
-    cursor: pointer;
+    cursor: grab;
     border: 0;
     transition: all 120ms ease-in-out;
 }
@@ -447,6 +453,8 @@ body{
     grid-template-columns: auto auto 0.8rem;
     grid-template-rows: 100%;
     align-content: center;
+    grid-row: 1;
+    grid-column: 2;
 }
 
 .staveGrid{
@@ -577,7 +585,7 @@ body{
     align-content: center;
 }
 
-.staveTuningContainer:active{
+.staveTuningContainer:is(.focus){
     background-color: var(--color-light-secondary);
 }
 
