--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,8 @@ body{
     background-color: var(--color-dark-secondary);
 }
 
-.ribbonButton:active{
+.ribbonButton:active,
+.ribbonButton.focus{
     border: 1px solid var(--color-light-tertiary);
     background-color: var(--color-dark-tertiary);
 }
@@ -137,7 +138,8 @@ body{
     background-color: var(--color-dark-secondary);
 }
 
-.ribbonSplitDropdownButton:active{
+.ribbonSplitDropdownButton:active,
+.ribbonSplitDropdownButton.focus{
     border: 1px solid var(--color-light-tertiary);
     background-color: var(--color-dark-tertiary);
 }
@@ -165,7 +167,8 @@ body{
     background-color: var(--color-dark-secondary);
 }
 
-.ribbonSplitDropdownDropdown:active{
+.ribbonSplitDropdownDropdown:active,
+.ribbonSplitDropdownDropdown.focus{
     border: 1px solid var(--color-light-tertiary);
     background-color: var(--color-dark-tertiary);
 }
@@ -294,6 +297,11 @@ body{
     box-shadow: 0 0 5px rgba(0,0,0,0.4);
 }
 
+.prototypeContainer:is(.focus){
+    outline: 0;
+    box-shadow: 0 0 5px rgba(0,0,0,0.4);
+}
+
 .prototypeContainer.dragged{
     z-index: 50;
     background-color: rgba(var(--color-light-primary), 0.8);
@@ -344,6 +352,10 @@ body{
 }
 
 .prototypeContainer.dragged .contextMenu{
+    opacity: 100%;
+}
+
+.prototypeContainer:is(.focus) .contextMenu{
     opacity: 100%;
 }
 
@@ -830,7 +842,7 @@ body{
 }
 
 
-.transientInputContainer{
+.popoverContainer{
     display: flex;
     background-color: var(--color-dark-primary);
     border: 1px solid var(--color-dark-secondary);
@@ -847,7 +859,7 @@ body{
     max-width: 20rem;
 }
 
-.transientItem{
+.popoverItem{
     z-index: 10;
     background-color: transparent;
     min-width: 1em;
@@ -856,78 +868,78 @@ body{
     font-size: 1em;
 }
 
-.transientItem:first-of-type{
+.popoverItem:first-of-type{
     padding: 1em 1em 0.5em 1em;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
 }
 
-.transientItem:last-of-type{
+.popoverItem:last-of-type{
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
 
-.transientItem.transientInput{
+.popoverItem.popoverInput{
     max-width: 100%;
     transition: all 80ms ease-in-out;
     overflow: hidden;
     white-space: nowrap;
 }
 
-.transientItem.transientInput:hover{
+.popoverItem.popoverInput:hover{
     background-color: var(--color-dark-secondary);
 }
 
-.transientItem.transientInput:focus{
+.popoverItem.popoverInput:focus{
     background-color: var(--color-dark-tertiary);
 }
 
-.transientItem.transientInput::before{
+.popoverItem.popoverInput::before{
     color: var(--color-light-tertiary);
     content: '> ';
     font-size: 1em;
     vertical-align: middle;
 }
 
-.transientItem.transientInput:focus::before{
+.popoverItem.popoverInput:focus::before{
     color: var(--color-light-primary);
 }
 
-.transientItem.transientInput:focus-visible{
+.popoverItem.popoverInput:focus-visible{
     outline: 0;
 }
 
-.transientItem.transientInput.error::before{
+.popoverItem.popoverInput.error::before{
     content: 'x ';
     color: var(--color-red);
 }
 
-.transientItem.transientInput.error:focus{
+.popoverItem.popoverInput.error:focus{
     background-color: var(--color-red-dark);
 }
 
-.transientItem.transientButton{
+.popoverItem.popoverButton{
     user-select: none;
     cursor: pointer;
 }
 
-.transientItem.transientButton:hover{
+.popoverItem.popoverButton:hover{
     background-color: var(--color-dark-secondary);
 }
 
-.transientItem.transientButton:active{
+.popoverItem.popoverButton:active{
     background-color: var(--color-dark-tertiary);
 }
 
-.transientItem.transientLabel{
+.popoverItem.popoverLabel{
     user-select: none;
 }
 
-.transientItem.transientLabel:first-of-type{
+.popoverItem.popoverLabel:first-of-type{
     font-weight: bold;
 }
 
-.transientItem.transientDivisor{
+.popoverItem.popoverDivisor{
     width: 100%;
     min-height: 1px;
     height: 1px;
@@ -936,7 +948,7 @@ body{
     margin: 0.5em 0;
 }
 
-.transientItem.end{
+.popoverItem.end{
     width: 100%;
     height: 0.5rem;
     background: var(--color-dark-primary);
